...
            access(keyPath: \.currentProviderID)
            return selectedProviderID
        }
        set {
            withMutation(keyPath: \.currentProviderID) {
                selectedProviderID = newValue
                save()
            }
            onActiveProviderChanged?(activeProvider)
        }
    }

    var activeProvider: Provider? {
...
